; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/mlx4/extr_main.c_handle_en_event.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/mlx4/extr_main.c_handle_en_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_ib_dev = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32** }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mlx4_ib_dev*, i32, i64)* @handle_en_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handle_en_event(%struct.mlx4_ib_dev* %0, i32 %1, i64 %2) #0 {
  %4 = alloca %struct.mlx4_ib_dev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store %struct.mlx4_ib_dev* %0, %struct.mlx4_ib_dev** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %7 = load i64, i64* %6, align 8
  switch i64 %7, label %24 [
    i64 128, label %8
    i64 130, label %8
    i64 129, label %12
  ]

8:                                                ; preds = %3, %3
  %9 = load %struct.mlx4_ib_dev*, %struct.mlx4_ib_dev** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @update_ipv6_gids(%struct.mlx4_ib_dev* %9, i32 %10, i32 0)
  br label %24

12:                                               ; preds = %3
  %13 = load %struct.mlx4_ib_dev*, %struct.mlx4_ib_dev** %4, align 8
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @update_ipv6_gids(%struct.mlx4_ib_dev* %13, i32 %14, i32 1)
  %16 = load %struct.mlx4_ib_dev*, %struct.mlx4_ib_dev** %4, align 8
  %17 = getelementptr inbounds %struct.mlx4_ib_dev, %struct.mlx4_ib_dev* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32**, i32*** %18, align 8
  %20 = load i32, i32* %5, align 4
  %21 = sub nsw i32 %20, 1
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i32*, i32** %19, i64 %22
  store i32* null, i32** %23, align 8
  br label %24

24:                                               ; preds = %12, %3, %8
  ret void
}

declare dso_local i32 @update_ipv6_gids(%struct.mlx4_ib_dev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
